Header finished and hero section almost finished,section counter started...

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3540,31 +3540,31 @@ input[type="button"].btn-block {
       color: rgba(0, 0, 0, 0.9); }
 
 .navbar-dark .navbar-brand {
-  color: #fff; }
+  color: #FCE38A; }
   .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
-    color: #fff; }
+    color: #FCE38A; }
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5); }
+  color: white; }
   .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-    color: rgba(255, 255, 255, 0.75); }
+    color: rgba(252, 227, 138, 0.75); }
   .navbar-dark .navbar-nav .nav-link.disabled {
     color: rgba(255, 255, 255, 0.25); }
 .navbar-dark .navbar-nav .show > .nav-link,
 .navbar-dark .navbar-nav .active > .nav-link,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .nav-link.active {
-  color: #fff; }
+  color: #FCE38A; }
 .navbar-dark .navbar-toggler {
-  color: rgba(255, 255, 255, 0.5);
+  color: white;
   border-color: rgba(255, 255, 255, 0.1); }
 .navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
 .navbar-dark .navbar-text {
-  color: rgba(255, 255, 255, 0.5); }
+  color: white; }
   .navbar-dark .navbar-text a {
-    color: #fff; }
+    color: #FCE38A; }
     .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
-      color: #fff; }
+      color: #FCE38A; }
 
 .card {
   position: relative;
@@ -6388,6 +6388,25 @@ button.bg-dark:focus {
 .mx-5 {
   margin-left: 3rem !important; }
 
+.m-6 {
+  margin: 6rem !important; }
+
+.mt-6,
+.my-6 {
+  margin-top: 6rem !important; }
+
+.mr-6,
+.mx-6 {
+  margin-right: 6rem !important; }
+
+.mb-6,
+.my-6 {
+  margin-bottom: 6rem !important; }
+
+.ml-6,
+.mx-6 {
+  margin-left: 6rem !important; }
+
 .p-0 {
   padding: 0 !important; }
 
@@ -6502,6 +6521,25 @@ button.bg-dark:focus {
 .px-5 {
   padding-left: 3rem !important; }
 
+.p-6 {
+  padding: 6rem !important; }
+
+.pt-6,
+.py-6 {
+  padding-top: 6rem !important; }
+
+.pr-6,
+.px-6 {
+  padding-right: 6rem !important; }
+
+.pb-6,
+.py-6 {
+  padding-bottom: 6rem !important; }
+
+.pl-6,
+.px-6 {
+  padding-left: 6rem !important; }
+
 .m-n1 {
   margin: -0.25rem !important; }
 
@@ -6596,6 +6634,25 @@ button.bg-dark:focus {
 .ml-n5,
 .mx-n5 {
   margin-left: -3rem !important; }
+
+.m-n6 {
+  margin: -6rem !important; }
+
+.mt-n6,
+.my-n6 {
+  margin-top: -6rem !important; }
+
+.mr-n6,
+.mx-n6 {
+  margin-right: -6rem !important; }
+
+.mb-n6,
+.my-n6 {
+  margin-bottom: -6rem !important; }
+
+.ml-n6,
+.mx-n6 {
+  margin-left: -6rem !important; }
 
 .m-auto {
   margin: auto !important; }
@@ -6731,6 +6788,25 @@ button.bg-dark:focus {
   .mx-xm-5 {
     margin-left: 3rem !important; }
 
+  .m-xm-6 {
+    margin: 6rem !important; }
+
+  .mt-xm-6,
+  .my-xm-6 {
+    margin-top: 6rem !important; }
+
+  .mr-xm-6,
+  .mx-xm-6 {
+    margin-right: 6rem !important; }
+
+  .mb-xm-6,
+  .my-xm-6 {
+    margin-bottom: 6rem !important; }
+
+  .ml-xm-6,
+  .mx-xm-6 {
+    margin-left: 6rem !important; }
+
   .p-xm-0 {
     padding: 0 !important; }
 
@@ -6845,6 +6921,25 @@ button.bg-dark:focus {
   .px-xm-5 {
     padding-left: 3rem !important; }
 
+  .p-xm-6 {
+    padding: 6rem !important; }
+
+  .pt-xm-6,
+  .py-xm-6 {
+    padding-top: 6rem !important; }
+
+  .pr-xm-6,
+  .px-xm-6 {
+    padding-right: 6rem !important; }
+
+  .pb-xm-6,
+  .py-xm-6 {
+    padding-bottom: 6rem !important; }
+
+  .pl-xm-6,
+  .px-xm-6 {
+    padding-left: 6rem !important; }
+
   .m-xm-n1 {
     margin: -0.25rem !important; }
 
@@ -6939,6 +7034,25 @@ button.bg-dark:focus {
   .ml-xm-n5,
   .mx-xm-n5 {
     margin-left: -3rem !important; }
+
+  .m-xm-n6 {
+    margin: -6rem !important; }
+
+  .mt-xm-n6,
+  .my-xm-n6 {
+    margin-top: -6rem !important; }
+
+  .mr-xm-n6,
+  .mx-xm-n6 {
+    margin-right: -6rem !important; }
+
+  .mb-xm-n6,
+  .my-xm-n6 {
+    margin-bottom: -6rem !important; }
+
+  .ml-xm-n6,
+  .mx-xm-n6 {
+    margin-left: -6rem !important; }
 
   .m-xm-auto {
     margin: auto !important; }
@@ -7073,6 +7187,25 @@ button.bg-dark:focus {
   .mx-sm-5 {
     margin-left: 3rem !important; }
 
+  .m-sm-6 {
+    margin: 6rem !important; }
+
+  .mt-sm-6,
+  .my-sm-6 {
+    margin-top: 6rem !important; }
+
+  .mr-sm-6,
+  .mx-sm-6 {
+    margin-right: 6rem !important; }
+
+  .mb-sm-6,
+  .my-sm-6 {
+    margin-bottom: 6rem !important; }
+
+  .ml-sm-6,
+  .mx-sm-6 {
+    margin-left: 6rem !important; }
+
   .p-sm-0 {
     padding: 0 !important; }
 
@@ -7187,6 +7320,25 @@ button.bg-dark:focus {
   .px-sm-5 {
     padding-left: 3rem !important; }
 
+  .p-sm-6 {
+    padding: 6rem !important; }
+
+  .pt-sm-6,
+  .py-sm-6 {
+    padding-top: 6rem !important; }
+
+  .pr-sm-6,
+  .px-sm-6 {
+    padding-right: 6rem !important; }
+
+  .pb-sm-6,
+  .py-sm-6 {
+    padding-bottom: 6rem !important; }
+
+  .pl-sm-6,
+  .px-sm-6 {
+    padding-left: 6rem !important; }
+
   .m-sm-n1 {
     margin: -0.25rem !important; }
 
@@ -7281,6 +7433,25 @@ button.bg-dark:focus {
   .ml-sm-n5,
   .mx-sm-n5 {
     margin-left: -3rem !important; }
+
+  .m-sm-n6 {
+    margin: -6rem !important; }
+
+  .mt-sm-n6,
+  .my-sm-n6 {
+    margin-top: -6rem !important; }
+
+  .mr-sm-n6,
+  .mx-sm-n6 {
+    margin-right: -6rem !important; }
+
+  .mb-sm-n6,
+  .my-sm-n6 {
+    margin-bottom: -6rem !important; }
+
+  .ml-sm-n6,
+  .mx-sm-n6 {
+    margin-left: -6rem !important; }
 
   .m-sm-auto {
     margin: auto !important; }
@@ -7415,6 +7586,25 @@ button.bg-dark:focus {
   .mx-md-5 {
     margin-left: 3rem !important; }
 
+  .m-md-6 {
+    margin: 6rem !important; }
+
+  .mt-md-6,
+  .my-md-6 {
+    margin-top: 6rem !important; }
+
+  .mr-md-6,
+  .mx-md-6 {
+    margin-right: 6rem !important; }
+
+  .mb-md-6,
+  .my-md-6 {
+    margin-bottom: 6rem !important; }
+
+  .ml-md-6,
+  .mx-md-6 {
+    margin-left: 6rem !important; }
+
   .p-md-0 {
     padding: 0 !important; }
 
@@ -7529,6 +7719,25 @@ button.bg-dark:focus {
   .px-md-5 {
     padding-left: 3rem !important; }
 
+  .p-md-6 {
+    padding: 6rem !important; }
+
+  .pt-md-6,
+  .py-md-6 {
+    padding-top: 6rem !important; }
+
+  .pr-md-6,
+  .px-md-6 {
+    padding-right: 6rem !important; }
+
+  .pb-md-6,
+  .py-md-6 {
+    padding-bottom: 6rem !important; }
+
+  .pl-md-6,
+  .px-md-6 {
+    padding-left: 6rem !important; }
+
   .m-md-n1 {
     margin: -0.25rem !important; }
 
@@ -7623,6 +7832,25 @@ button.bg-dark:focus {
   .ml-md-n5,
   .mx-md-n5 {
     margin-left: -3rem !important; }
+
+  .m-md-n6 {
+    margin: -6rem !important; }
+
+  .mt-md-n6,
+  .my-md-n6 {
+    margin-top: -6rem !important; }
+
+  .mr-md-n6,
+  .mx-md-n6 {
+    margin-right: -6rem !important; }
+
+  .mb-md-n6,
+  .my-md-n6 {
+    margin-bottom: -6rem !important; }
+
+  .ml-md-n6,
+  .mx-md-n6 {
+    margin-left: -6rem !important; }
 
   .m-md-auto {
     margin: auto !important; }
@@ -7757,6 +7985,25 @@ button.bg-dark:focus {
   .mx-lg-5 {
     margin-left: 3rem !important; }
 
+  .m-lg-6 {
+    margin: 6rem !important; }
+
+  .mt-lg-6,
+  .my-lg-6 {
+    margin-top: 6rem !important; }
+
+  .mr-lg-6,
+  .mx-lg-6 {
+    margin-right: 6rem !important; }
+
+  .mb-lg-6,
+  .my-lg-6 {
+    margin-bottom: 6rem !important; }
+
+  .ml-lg-6,
+  .mx-lg-6 {
+    margin-left: 6rem !important; }
+
   .p-lg-0 {
     padding: 0 !important; }
 
@@ -7871,6 +8118,25 @@ button.bg-dark:focus {
   .px-lg-5 {
     padding-left: 3rem !important; }
 
+  .p-lg-6 {
+    padding: 6rem !important; }
+
+  .pt-lg-6,
+  .py-lg-6 {
+    padding-top: 6rem !important; }
+
+  .pr-lg-6,
+  .px-lg-6 {
+    padding-right: 6rem !important; }
+
+  .pb-lg-6,
+  .py-lg-6 {
+    padding-bottom: 6rem !important; }
+
+  .pl-lg-6,
+  .px-lg-6 {
+    padding-left: 6rem !important; }
+
   .m-lg-n1 {
     margin: -0.25rem !important; }
 
@@ -7965,6 +8231,25 @@ button.bg-dark:focus {
   .ml-lg-n5,
   .mx-lg-n5 {
     margin-left: -3rem !important; }
+
+  .m-lg-n6 {
+    margin: -6rem !important; }
+
+  .mt-lg-n6,
+  .my-lg-n6 {
+    margin-top: -6rem !important; }
+
+  .mr-lg-n6,
+  .mx-lg-n6 {
+    margin-right: -6rem !important; }
+
+  .mb-lg-n6,
+  .my-lg-n6 {
+    margin-bottom: -6rem !important; }
+
+  .ml-lg-n6,
+  .mx-lg-n6 {
+    margin-left: -6rem !important; }
 
   .m-lg-auto {
     margin: auto !important; }
@@ -8099,6 +8384,25 @@ button.bg-dark:focus {
   .mx-xl-5 {
     margin-left: 3rem !important; }
 
+  .m-xl-6 {
+    margin: 6rem !important; }
+
+  .mt-xl-6,
+  .my-xl-6 {
+    margin-top: 6rem !important; }
+
+  .mr-xl-6,
+  .mx-xl-6 {
+    margin-right: 6rem !important; }
+
+  .mb-xl-6,
+  .my-xl-6 {
+    margin-bottom: 6rem !important; }
+
+  .ml-xl-6,
+  .mx-xl-6 {
+    margin-left: 6rem !important; }
+
   .p-xl-0 {
     padding: 0 !important; }
 
@@ -8213,6 +8517,25 @@ button.bg-dark:focus {
   .px-xl-5 {
     padding-left: 3rem !important; }
 
+  .p-xl-6 {
+    padding: 6rem !important; }
+
+  .pt-xl-6,
+  .py-xl-6 {
+    padding-top: 6rem !important; }
+
+  .pr-xl-6,
+  .px-xl-6 {
+    padding-right: 6rem !important; }
+
+  .pb-xl-6,
+  .py-xl-6 {
+    padding-bottom: 6rem !important; }
+
+  .pl-xl-6,
+  .px-xl-6 {
+    padding-left: 6rem !important; }
+
   .m-xl-n1 {
     margin: -0.25rem !important; }
 
@@ -8307,6 +8630,25 @@ button.bg-dark:focus {
   .ml-xl-n5,
   .mx-xl-n5 {
     margin-left: -3rem !important; }
+
+  .m-xl-n6 {
+    margin: -6rem !important; }
+
+  .mt-xl-n6,
+  .my-xl-n6 {
+    margin-top: -6rem !important; }
+
+  .mr-xl-n6,
+  .mx-xl-n6 {
+    margin-right: -6rem !important; }
+
+  .mb-xl-n6,
+  .my-xl-n6 {
+    margin-bottom: -6rem !important; }
+
+  .ml-xl-n6,
+  .mx-xl-n6 {
+    margin-left: -6rem !important; }
 
   .m-xl-auto {
     margin: auto !important; }
@@ -8441,6 +8783,25 @@ button.bg-dark:focus {
   .mx-xxl-5 {
     margin-left: 3rem !important; }
 
+  .m-xxl-6 {
+    margin: 6rem !important; }
+
+  .mt-xxl-6,
+  .my-xxl-6 {
+    margin-top: 6rem !important; }
+
+  .mr-xxl-6,
+  .mx-xxl-6 {
+    margin-right: 6rem !important; }
+
+  .mb-xxl-6,
+  .my-xxl-6 {
+    margin-bottom: 6rem !important; }
+
+  .ml-xxl-6,
+  .mx-xxl-6 {
+    margin-left: 6rem !important; }
+
   .p-xxl-0 {
     padding: 0 !important; }
 
@@ -8555,6 +8916,25 @@ button.bg-dark:focus {
   .px-xxl-5 {
     padding-left: 3rem !important; }
 
+  .p-xxl-6 {
+    padding: 6rem !important; }
+
+  .pt-xxl-6,
+  .py-xxl-6 {
+    padding-top: 6rem !important; }
+
+  .pr-xxl-6,
+  .px-xxl-6 {
+    padding-right: 6rem !important; }
+
+  .pb-xxl-6,
+  .py-xxl-6 {
+    padding-bottom: 6rem !important; }
+
+  .pl-xxl-6,
+  .px-xxl-6 {
+    padding-left: 6rem !important; }
+
   .m-xxl-n1 {
     margin: -0.25rem !important; }
 
@@ -8649,6 +9029,25 @@ button.bg-dark:focus {
   .ml-xxl-n5,
   .mx-xxl-n5 {
     margin-left: -3rem !important; }
+
+  .m-xxl-n6 {
+    margin: -6rem !important; }
+
+  .mt-xxl-n6,
+  .my-xxl-n6 {
+    margin-top: -6rem !important; }
+
+  .mr-xxl-n6,
+  .mx-xxl-n6 {
+    margin-right: -6rem !important; }
+
+  .mb-xxl-n6,
+  .my-xxl-n6 {
+    margin-bottom: -6rem !important; }
+
+  .ml-xxl-n6,
+  .mx-xxl-n6 {
+    margin-left: -6rem !important; }
 
   .m-xxl-auto {
     margin: auto !important; }
