--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -9,6 +9,7 @@
 @import "theme/_fonts.scss";
 @import "theme/_base.scss";
 @import "theme/_header.scss";
+@import "theme/_leadsection.scss";
 @import "theme/_about.scss";
 @import "theme/_counter.scss";
 @import "theme/_services.scss";
