--- a/scss/theme/_fonts.scss
+++ b/scss/theme/_fonts.scss
@@ -5,10 +5,11 @@
 
 $font-kaushianScript:'Kaushan Script', cursive;
 $font-roboto:'Roboto', sans-serif;
-$font-moncerat:'Montserrat', sans-serif;
+$font-montserrat:'Montserrat', sans-serif;
 
 
 
 $font-weight-regular:400;
 $font-weight-bold:700;
+$font-weight-extrabold: 800;
 $font-light-italic:300i;
