--- a/scss/theme/_services.scss
+++ b/scss/theme/_services.scss
@@ -1,10 +1,16 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 12, 2019, 3:21:04 PM
-    Author     : sonja
-*/
 
+.services{
+    .w-20{
+        color:$primary;
+        font-size: 31px;
+        
+    }
+    .w-80{
+        h6{
+            color:#000;
+            font-family: $font-montserrat;
+            font-weight: $font-weight-bold;
+            text-transform: uppercase;
+        }
+    }
+}
