--- a/scss/theme/_slider1.scss
+++ b/scss/theme/_slider1.scss
@@ -1,10 +1,10 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 12, 2019, 3:23:22 PM
-    Author     : sonja
-*/
 
+
+
+.slider1{
+    background-color: #F8F8F8;
+    p{
+        font-size: 24px;
+    }
+    
+}
