--- a/scss/theme/_services.scss
+++ b/scss/theme/_services.scss
@@ -13,4 +13,14 @@
             text-transform: uppercase;
         }
     }
+    h2{
+         &:after{
+            content: "";
+            height: 3px;	
+            width: 60px;	
+            background-color: $secondary;
+            display:block;
+            margin:20px auto 0;
+        }
+    }
 }
