--- a/scss/theme/_devices.scss
+++ b/scss/theme/_devices.scss
@@ -4,6 +4,16 @@
     background-size:cover;
     background-position:center center;
     
+    h2{
+         &:after{
+            content: "";
+            height: 3px;	
+            width: 60px;	
+            background-color: $secondary;
+            display:block;
+            margin:20px auto 0;
+        }
+    }
     
     
    
