--- a/scss/theme/_leadsection.scss
+++ b/scss/theme/_leadsection.scss
@@ -14,6 +14,15 @@
         color: #fff;
         font-weight: $font-weight-extrabold;
         font-size:60px;
+        
+        &:after{
+           content: "";
+           display: block;
+           margin: 20px auto 0;
+           height: 3px;	
+           width: 60px;	
+           background-color: #FFFFFF;
+        }
     }
     
       .btn{
