--- a/scss/theme/_whatwedo.scss
+++ b/scss/theme/_whatwedo.scss
@@ -1,3 +1,18 @@
 
 
+.whatwedo{
+    
+        h2.red-line{
+         &:after{
+            content: "";
+            height: 3px;	
+            width: 60px;	
+            background-color: $secondary;
+            display:block;
+            margin:20px auto 0;
+            }
+        }
+    
+}
+
 
