--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -17,7 +17,7 @@
 @import "theme/_whatwedo.scss";
 @import "theme/_slider-1.scss";
 @import "theme/_team.scss";
-@import "theme/_bages.scss";
+@import "theme/_badges.scss";
 @import "theme/_somework.scss";
 @import "theme/_slider2.scss";
 @import "theme/_clients.scss";
