--- a/scss/theme/_somework.scss
+++ b/scss/theme/_somework.scss
@@ -1,10 +1,14 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 12, 2019, 3:24:51 PM
-    Author     : sonja
-*/
 
+
+.somework{
+    h2{
+         &:after{
+            content: "";
+            height: 3px;	
+            width: 60px;	
+            background-color: $secondary;
+            display:block;
+            margin:20px auto 0;
+        }
+    }
+}
