--- a/scss/theme/_team.scss
+++ b/scss/theme/_team.scss
@@ -9,4 +9,40 @@
             margin:20px auto 0;
         }
     }
-}
+    .team-member{
+        position:relative;
+        transition:0.5 linear;
+        &:hover{
+            box-shadow: 5px 5px 8px $primary; 
+        }  
+        .team-hover{
+            position: absolute;
+            top:0;
+            left:0;
+            width: 100%;
+            height: 100%;
+            background-color: linear-gradient(270deg, #F38181 0%, #FCE38A 100%);
+            display: none;
+            
+            .team-social{
+                position: relative;
+                top:50%;
+                transform: translateY(-50%);
+                text-align: center;
+                
+                .fa{
+                    width: 40px;
+                    height: 40px;
+                    line-height: 40px;
+                    font-size: 30px;
+                    color:#fff;
+                }
+                
+            }//class team-social
+        }//class team-hover
+        &:hover.team-hover{
+            display:block;
+        }
+    }//class member end
+    
+}//class team end
