Section Some work finished...

--- a/css/theme.css
+++ b/css/theme.css
@@ -150,8 +150,7 @@ header .navbar-nav .nav-link {
     width: 30px;
     background-color: #CCCCCC; }
   .slider-1 .fa {
-    line-height: 26px;
-    font-size: 2rem; }
+    font-size: 80px; }
   .slider-1 h5:before {
     content: "";
     height: 3px;
@@ -176,14 +175,16 @@ header .navbar-nav .nav-link {
   position: relative;
   transition: 0.5 linear; }
   .team .team-member:hover {
-    box-shadow: 5px 5px 8px #95E1D3; }
+    box-shadow: 5px 5px 8px 0px #95E1D3; }
+    .team .team-member:hover figure {
+      position: relative; }
   .team .team-member .team-hover {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: linear-gradient(270deg, #F38181 0%, #FCE38A 100%);
+    background-image: linear-gradient(to right, rgba(243, 129, 129, 0.9), rgba(252, 255, 138, 0.9));
     display: none; }
     .team .team-member .team-hover .team-social {
       position: relative;
@@ -195,21 +196,41 @@ header .navbar-nav .nav-link {
         height: 40px;
         line-height: 40px;
         font-size: 30px;
-        color: #fff; }
-  .team .team-member:hover.team-hover {
+        color: #fff;
+        background-color: #FCE38A; }
+        .team .team-member .team-hover .team-social .fa:hover {
+          background-color: #F38181;
+          color: #fff;
+          border-color: #F38181 1px solid; }
+  .team .team-member:hover .team-hover {
     display: block; }
 
 .badges {
   background-color: #F8F8F8;
   text-align: center; }
 
-.somework h2:after {
+.somework .red-line1:after {
   content: "";
   height: 3px;
   width: 60px;
   background-color: #F38181;
   display: block;
   margin: 20px auto 0; }
+.somework .gallery-item {
+  position: relative; }
+  .somework .gallery-item .gallery-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right, rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
+    display: none;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center; }
+  .somework .gallery-item:hover .gallery-hover {
+    display: flex; }
 
 /*
 To change this license header, choose License Headers in Project Properties.
