--- a/scss/theme/_slider-1.scss
+++ b/scss/theme/_slider-1.scss
@@ -36,8 +36,9 @@
         background-color: #CCCCCC;
     }
     .fa{
-        line-height: 26px;
-        font-size: 2rem;
+        
+        font-size: 80px;
+        
     }
     h5{
         &:before{
