--- a/scss/theme/_somework.scss
+++ b/scss/theme/_somework.scss
@@ -1,7 +1,7 @@
 
 
 .somework{
-    h2{
+    .red-line1{
          &:after{
             content: "";
             height: 3px;	
@@ -9,6 +9,25 @@
             background-color: $secondary;
             display:block;
             margin:20px auto 0;
+        }
+    }
+    .gallery-item{
+        position:relative;
+        
+        .gallery-hover{
+            position: absolute;
+            top:0;
+            left:0;
+            width: 100%;
+            height: 100%;
+            background-image: linear-gradient(to right,rgba(243,129,129,0.8),rgba(252,227,138,0.8));
+            display:none;
+            justify-content: center;
+            flex-direction: column;
+            text-align: center;
+        }
+        &:hover .gallery-hover{
+            display: flex;
         }
     }
 }
