--- a/scss/theme/_team.scss
+++ b/scss/theme/_team.scss
@@ -13,7 +13,11 @@
         position:relative;
         transition:0.5 linear;
         &:hover{
-            box-shadow: 5px 5px 8px $primary; 
+            box-shadow: 5px 5px 8px 0px $primary; 
+            
+            figure{
+                position: relative;
+            }
         }  
         .team-hover{
             position: absolute;
@@ -21,7 +25,7 @@
             left:0;
             width: 100%;
             height: 100%;
-            background-color: linear-gradient(270deg, #F38181 0%, #FCE38A 100%);
+            background-image: linear-gradient(to right, rgba(243,129,129,0.9), rgba(252,272,138,0.9));
             display: none;
             
             .team-social{
@@ -30,19 +34,27 @@
                 transform: translateY(-50%);
                 text-align: center;
                 
+                
                 .fa{
                     width: 40px;
                     height: 40px;
                     line-height: 40px;
                     font-size: 30px;
                     color:#fff;
+                    background-color: #FCE38A;
+                   
+                    &:hover{
+                        background-color: #F38181;
+                        color: #fff;
+                        border-color: #F38181 1px solid;
+                        
+                    }
                 }
                 
             }//class team-social
         }//class team-hover
-        &:hover.team-hover{
+        &:hover .team-hover{
             display:block;
         }
     }//class member end
-    
 }//class team end
