--- a/css/theme.css
+++ b/css/theme.css
@@ -70,13 +70,38 @@ header .navbar-nav .nav-link {
     font-size: 72px; }
   .lead-section h1 {
     font-size: 150px; } }
-.story h2:after {
-  content: "";
-  height: 3px;
-  width: 60px;
-  background-color: #F38181;
-  display: block;
-  margin: 20px auto 0; }
+.story {
+  position: relative;
+  transition: 0.5 linear; }
+  .story:hover {
+    box-shadow: 5px 5px 8px 0px #95E1D3; }
+  .story figure {
+    position: relative; }
+  .story h2:after {
+    content: "";
+    height: 3px;
+    width: 60px;
+    background-color: #F38181;
+    display: block;
+    margin: 20px auto 0; }
+  .story .gallery-item {
+    position: relative; }
+    .story .gallery-item .gallery-hover {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: linear-gradient(to right, rgba(243, 129, 129, 0.8), rgba(252, 227, 138, 0.8));
+      display: none;
+      justify-content: center;
+      flex-direction: column;
+      text-align: center;
+      box-shadow: 5px 5px 8px 0px #95E1D3; }
+      .story .gallery-item .gallery-hover .fa {
+        color: #fff; }
+    .story .gallery-item:hover .gallery-hover {
+      display: flex; }
 
 .counter {
   background-color: #95E1D3;
@@ -138,19 +163,20 @@ header .navbar-nav .nav-link {
     top: 0;
     transform: translateY(-50%);
     left: 100px;
-    height: 30px;
-    width: 30px;
+    height: 50px;
+    width: 50px;
     background-color: #CCCCCC; }
   .slider-1 .owl-next {
     position: absolute;
     top: 0;
     transform: translateY(-50%);
     right: 100px;
-    height: 30px;
-    width: 30px;
+    height: 50px;
+    width: 50px;
     background-color: #CCCCCC; }
   .slider-1 .fa {
-    font-size: 80px; }
+    font-size: 80px;
+    border-color: #95E1D3 3px solid; }
   .slider-1 h5:before {
     content: "";
     height: 3px;
@@ -232,15 +258,54 @@ header .navbar-nav .nav-link {
   .somework .gallery-item:hover .gallery-hover {
     display: flex; }
 
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 12, 2019, 3:25:16 PM
-    Author     : sonja
-*/
+.slider-2 {
+  position: relative;
+  background-color: #F8F8F8; }
+  .slider-2 img {
+    display: block;
+    height: 232px;
+    width: 326px;
+    border-radius: 50%;
+    overflow: hidden; }
+  .slider-2 p {
+    font-size: 24px; }
+  .slider-2 .owl-nav {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%; }
+  .slider-2 .owl-prev {
+    position: absolute;
+    top: 0;
+    transform: translateY(-50%);
+    left: 100px;
+    height: 50px;
+    width: 50px;
+    background-color: #CCCCCC; }
+  .slider-2 .owl-next {
+    position: absolute;
+    top: 0;
+    transform: translateY(-50%);
+    right: 100px;
+    height: 50px;
+    width: 50px;
+    background-color: #CCCCCC; }
+  .slider-2 .fa {
+    font-size: 80px;
+    border-color: #95E1D3 3px solid; }
+  .slider-2 h5:before {
+    content: "";
+    height: 3px;
+    width: 60px;
+    background-color: #F38181;
+    display: inline-block;
+    margin: 20px auto 0; }
+
+@media (min-width: 992px) {
+  .slider-1 .owl-nav .owl-prev {
+    left: 5%; }
+  .slider-1 .owl-nav .owl-next {
+    right: 5%; } }
 /*
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
