--- a/scss/theme/_about.scss
+++ b/scss/theme/_about.scss
@@ -1,6 +1,14 @@
 
 
 .story{
+     position:relative;
+     transition:0.5 linear;
+        &:hover{
+            box-shadow: 5px 5px 8px 0px $primary; 
+        }
+            figure{
+                position: relative;
+            }
     h2{
         &:after{
             content: "";
@@ -11,4 +19,28 @@
             margin:20px auto 0;
         }
     }
-}
+        .gallery-item{
+        position:relative;
+        
+        .gallery-hover{
+            position: absolute;
+            top:0;
+            left:0;
+            width: 100%;
+            height: 100%;
+            background-image: linear-gradient(to right,rgba(243,129,129,0.8),rgba(252,227,138,0.8));
+            display:none;
+            justify-content: center;
+            flex-direction: column;
+            text-align: center;
+            box-shadow: 5px 5px 8px 0px $primary;
+            .fa{
+                color: #fff;
+            }
+        }
+        &:hover .gallery-hover{
+            display: flex;
+        }
+    }
+
+}//story end
