--- a/scss/theme/_clients.scss
+++ b/scss/theme/_clients.scss
@@ -1,10 +1,38 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 12, 2019, 3:25:41 PM
-    Author     : sonja
-*/
 
+
+.clients{
+    background-size:cover;
+    background-position:center center;
+    
+    h2{
+         &:after{
+            content: "";
+            height: 3px;	
+            width: 60px;	
+            background-color: $secondary;
+            display:block;
+            margin:20px auto 0;
+        }
+    }
+    .client-item{
+       
+    img{
+        height:100px;
+        width: 100px;
+        border-radius:50%;
+        overflow: hiden;
+    }
+    .red-line{
+            
+            &:after{
+            content: "";
+            height: 3px;	
+            width: 60px;	
+            background-color: $secondary;
+            display:block;
+            margin:20px auto 0;
+        }
+    }
+    }
+   
+}//devices end
