Section Blog finished...

--- a/css/theme.css
+++ b/css/theme.css
@@ -263,8 +263,8 @@ header .navbar-nav .nav-link {
   background-color: #F8F8F8; }
   .slider-2 img {
     display: block;
-    height: 232px;
-    width: 326px;
+    height: 250px;
+    width: 250px;
     border-radius: 50%;
     overflow: hidden; }
   .slider-2 p {
@@ -329,15 +329,29 @@ header .navbar-nav .nav-link {
     display: block;
     margin: 20px auto 0; }
 
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 12, 2019, 3:26:09 PM
-    Author     : sonja
-*/
+figure {
+  position: relative; }
+  figure .green-card {
+    position: absolute;
+    height: 70px;
+    width: 60px;
+    background-color: #95E1D3;
+    bottom: 10px;
+    right: 370px;
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: Montserrat;
+    text-align: center; }
+    figure .green-card .date {
+      font-weight: normal;
+      position: absolute;
+      color: #fff;
+      font-size: 15px;
+      text-align: center;
+      top: 40px;
+      left: 12px; }
+
 /*
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
