--- a/scss/theme/_blog.scss
+++ b/scss/theme/_blog.scss
@@ -1,10 +1,29 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 12, 2019, 3:26:09 PM
-    Author     : sonja
-*/
 
+
+figure{
+    position:relative;
+    
+    .green-card{
+        position: absolute;
+        height: 70px;
+        width: 60px;
+        background-color: #95E1D3;
+        bottom: 10px;
+        right: 370px;
+        color:#fff;
+        font-size:30px; 
+        font-weight: bold;
+        font-family: Montserrat;
+        text-align: center;
+        .date{
+            font-weight:normal;
+            position: absolute;
+            color:#fff;
+            font-size: 15px;
+            text-align: center;
+            top:40px;
+            left: 12px;
+            
+        }
+    }
+}
