--- a/scss/theme/_map.scss
+++ b/scss/theme/_map.scss
@@ -1,10 +1,20 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Apr 12, 2019, 3:26:39 PM
-    Author     : sonja
-*/
 
+.map{
+    h2{
+        color: $secondary;
+        a{
+            color:$secondary;
+        }
+        &:after{
+            content: "";
+            height: 3px;	
+            width: 60px;	
+            background-color: $secondary;
+            display:block;
+            margin:20px auto 0;
+        }
+    }
+    h3{
+        color:$secondary;
+    }
+}
