Section Footer almost finished.

--- a/css/theme.css
+++ b/css/theme.css
@@ -366,4 +366,23 @@ figure {
 .map h3 {
   color: #F38181; }
 
+footer h2 {
+  color: #CCCCCC;
+  font-family: Montserrat;
+  font-size: 46px;
+  font-weight: bold; }
+footer .footer-part2 {
+  position: relative; }
+  footer .footer-part2 h6 span {
+    color: #F38181; }
+  footer .footer-part2 h6 :before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: -350px;
+    height: 1px;
+    width: 1200px;
+    background-color: #E5E5E5; }
+
 /*# sourceMappingURL=theme.css.map */
