--- a/scss/theme/_footer.scss
+++ b/scss/theme/_footer.scss
@@ -1,1 +1,27 @@
 
+footer{
+    h2{
+        color: #CCCCCC;
+        font-family: Montserrat;
+        font-size: 46px;
+        font-weight: bold;
+    }
+.footer-part2{
+    position:relative;
+    h6{
+    span{
+        color:$secondary;
+    }
+    & :before{
+        content: "";
+        display: block;
+        position: absolute;
+        top:10px;
+        right:-350px;
+        height: 1px;
+        width: 1200px;
+        background-color: #E5E5E5;
+    }
+    }
+}
+}
